--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Professional CV of Gunnar Finkeldeh</title>
-    <meta name="description" content="Professional CV of Gunnar Finkeldeh" />
+    <title>Luigi Matheus Afornalli Breda</title>
+    <meta name="description" content="A passionate full-stack developer from Brasil!" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/aos.css" rel="stylesheet">
@@ -24,11 +24,11 @@
                     </div>
                     <div class="collapse navbar-collapse justify-content-end" id="navigation">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">Sobre</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
                             <!--<li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>-->
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experiência</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contatos</a></li>
                         </ul>
                     </div>
                 </div>
@@ -64,33 +64,34 @@
                         <div class="row">
                             <div class="col-lg-6 col-md-12">
                                 <div class="card-body">
-                                    <div class="h4 mt-0 title">About Me</div>
-                                    <p>Hello! I am Gunnar Finkeldeh. Senior QA Analyst.</p>
-                                    <p>A forward thinking, pragmatic and technical orientated Senior Technical QA Analyst with over 10 years of experience. Strong problem-solving abilities, as well as a keen eye for details. Able to self-manage and meet set targets and deadlines. Ability to effectively draw on existing test knowledge and previous experience to provide solutions and alternatives to test processes and challenges.</p>
+                                    <div class="h4 mt-0 title">Sobre Mim</div>
+                                    <p>A passionate full-stack developer from Brasil!</p>
+                                    <p>Desenvolvedor de software com mais de 13 anos de experiência em programação e tecnologia da informação. Com vasta habilidade em várias linguagens de programação, segurança de redes e gerenciamento de banco de dados. Já trabalhei na prefeitura de Curitiba, onde desenvolvi sites e aplicativos. Atualmente, ofereço meus serviços como freelancer, destacando-me como desenvolvedor blockchain e web3. Além disso, trabalho na prefeitura de Campo Magro, com suporte técnico em gerenciamento de rede e servidores.</p>
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-12">
                                 <div class="card-body">
-                                    <div class="h4 mt-0 title">Basic Information</div>
+                                    <div class="h4 mt-0 title">Informações de contato</div>
                                     <div class="row">
-                                        <div class="col-sm-4"><strong class="text-uppercase">Nationality:</strong></div>
-                                        <div class="col-sm-8">British</div>
+                                        <div class="col-sm-4"><strong class="text-uppercase">Nacionalidade:</strong></div>
+                                        <div class="col-sm-8">Brasil</div>
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-                                        <div class="col-sm-8">contact@gunnarfinkeldeh.com</div>
+                                        <div class="col-sm-8">luigimatheus@hotmail.com</div>
                                     </div>
                                     <div class="row mt-3">
-                                        <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-                                        <div class="col-sm-8">+44 77 19154 759</div>
+                                        <div class="col-sm-4"><strong class="text-uppercase">Telefone:</strong></div>
+                                        <div class="col-sm-8">(47) 9 3618-9205</div>
                                     </div>
                                     <div class="row mt-3">
-                                        <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-                                        <div class="col-sm-8">Hampstead, London, NW3</div>
+                                        <div class="col-sm-4"><strong class="text-uppercase">Localização:</strong></div>
+                                        <div class="col-sm-8">Curitiba, Paraná</div>
                                     </div>
                                     <div class="row mt-3">
-                                        <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
-                                        <div class="col-sm-8">English, German, Afrikaans</div>
+                                        <div class="col-sm-4"><strong class="text-uppercase">Idiomas:</strong></div>
+                                        <div class="col-sm-8">Português - Naturalizado</div>
+                                        <div class="col-sm-8">Inglês - Avançado</div>
                                     </div>
                                 </div>
                             </div>
@@ -100,19 +101,19 @@
             </div>
             <div class="section" id="skill">
                 <div class="container">
-                    <div class="h4 text-center mb-4 title">Professional Skills</div>
+                    <div class="h4 text-center mb-4 title">Minhas Skills</div>
                     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="progress-container progress-primary"><span class="progress-badge">Agile Methodologies</span>
+                                    <div class="progress-container progress-primary"><span class="progress-badge">Solidity</span>
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="progress-container progress-primary"><span class="progress-badge">Functional Testing</span>
+                                    <div class="progress-container progress-primary"><span class="progress-badge">PHP & MySql</span>
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div><span class="progress-value">100%</span>
                                         </div>
@@ -121,30 +122,30 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="progress-container progress-primary"><span class="progress-badge">Communication Skills</span>
+                                    <div class="progress-container progress-primary"><span class="progress-badge">Servidores e Redes de Computadores</span>
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div><span class="progress-value">100%</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="progress-container progress-primary"><span class="progress-badge">Problem Solving</span>
+                                    <div class="progress-container progress-primary"><span class="progress-badge">Testes Unitários</span>
                                         <div class="progress">
-                                            <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div><span class="progress-value">100%</span>
+                                            <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">100%</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="progress-container progress-primary"><span class="progress-badge">Regression Testing</span>
+                                    <div class="progress-container progress-primary"><span class="progress-badge">React & Express</span>
                                         <div class="progress">
-                                            <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div><span class="progress-value">100%</span>
+                                            <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">100%</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="progress-container progress-primary"><span class="progress-badge">Test Management</span>
+                                    <div class="progress-container progress-primary"><span class="progress-badge">Github</span>
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div><span class="progress-value">85%</span>
                                         </div>
@@ -301,20 +302,20 @@
             </div> -->
             <div class="section" id="experience">
                 <div class="container cc-experience">
-                    <div class="h4 text-center mb-4 title">Work Experience</div>
+                    <div class="h4 text-center mb-4 title">Experiências de Trabalho</div>
                     <div class="card">
                         <div class="row">
                             <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                                 <div class="card-body cc-experience-header">
-                                    <p>May 2021 - Current</p>
-                                    <div class="h5">Streetbees</div>
+                                    <p>Dezembro 2022 - Atual</p>
+                                    <div class="h5">Prefeitura Municipal de Campo Magro</div>
                                 </div>
                             </div>
                             <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                                 <div class="card-body">
-                                    <div class="h5">QA Engineer</div>
+                                    <div class="h5">Gerenciamento de Servidores e Rede de Computadores</div>
                                     <ul>
-                                        <li>Supporting the B2B Team by overseeing the testing of their Dashboards</li>
+                                        <li>Atuo como Gestor de Servidores e Rede de Computadores na Prefeitura Municipal de Campo Magro, onde sou responsável por assegurar a operação eficiente e confiável da infraestrutura tecnológica da organização. Meu objetivo é fornecer suporte de alta qualidade aos servidores, garantindo a disponibilidade e integridade dos sistemas e aplicativos críticos para o funcionamento diário da Prefeitura. Através da minha expertise em gerenciamento de redes e soluções tecnológicas, trabalho em colaboração com a equipe da Prefeitura para otimizar processos e garantir a satisfação dos usuários.</li>
                                         <li>Implementing and championing QA Processes within the Team</li>
                                         <li>Utilitizing a combination of exploratory testing and in sprint acceptance criteria</li>
                                     </ul>
