--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                         <div class="page-header-image" data-parallax="true" style="background-image: url('images/software-testing-trends.jpg');"></div>
                         <div class="container">
                             <div class="content-center">
-                                <div class="cc-profile-image"><a href="#"><img src="images/gunnar.jpg" alt="Image" /></a></div>
-                                <div class="h2 title">Gunnar Finkeldeh</div>
-                                <p class="category text-white">Senior Technical QA Analyst</p>
+                                <div class="cc-profile-image"><a href="#"><img src="https://media.licdn.com/dms/image/D4D03AQHL5yRU1X8zOg/profile-displayphoto-shrink_800_800/0/1675345003710?e=1680739200&v=beta&t=PaRkdb1JA2YEcSmH_11RgtkfKpzeWjqw-UBk2UyZc7I" alt="Image" /></a></div>
+                                <div class="h2 title">Luigi Matheus Afornalli Breda</div>
+                                <p class="category text-white">Desenvolvedor Blockchain e Analista de Redes</p>
                                 <!-- <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a> -->
-                                <a class="btn btn-primary" href="resources/CV-Gunnar-Finkeldeh.docx" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+                                <!-- <a class="btn btn-primary" href="resources/CV-Gunnar-Finkeldeh.docx" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a> -->
                             </div>
                         </div>
                         <div class="section">
