--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
                             <!--<li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>-->
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experiência</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contatos</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contatos</a></li> -->
                         </ul>
                     </div>
                 </div>
