--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Idiomas:</strong></div>
-                                        <div class="col-sm-8">Português - Naturalizado</div>
-                                        <div class="col-sm-8">Inglês - Avançado</div>
+                                        <div class="col-sm-8">Português - Naturalizado <br> Inglês - Avançado</div>
+                                        <!-- <div class="col-sm-8">Inglês - Avançado</div> -->
                                     </div>
                                 </div>
                             </div>
